Lab1 fix + Lab3 source